@@ -78,7 +78,7 @@ binary-truncate:		yes
 binary-byteorder:		big-endian
 
 # Allow larger REDEFINES items
-larger-redefines:		no
+larger-redefines:		error
 
 # Allow certain syntax variations (eg. REDEFINES position)
 relax-syntax-checks:		no
@@ -131,6 +131,9 @@ console-is-crt:			no
 # If yes, allow redefinition of the current program's name. This prevents its
 # use in a prototype-format CALL/CANCEL statement.
 program-name-redefinition:	yes
+
+# If yes, paragraph names may redefine field and section names (GCOS extension)
+relax-paragraph-name-uniqueness: yes
 
 # If yes, NO ECHO/NO-ECHO/OFF is the same as SECURE (hiding input with
 # asterisks, not spaces).
