@@ -155,6 +155,9 @@ console-is-crt:			no
 # use in a prototype-format CALL/CANCEL statement.
 program-name-redefinition:	yes
 
+# If yes, paragraph names may redefine field and section names (GCOS extension)
+relax-paragraph-name-uniqueness: no
+
 # If yes, NO ECHO/NO-ECHO/OFF is the same as SECURE (hiding input with
 # asterisks, not spaces).
 no-echo-means-secure:		no
