@@ -519,6 +519,7 @@ test.conf: missing definitions:
 	no definition of 'assign-disk-from'
 	no definition of 'vsam-status'
 	no definition of 'self-call-recursive'
+	no definition of 'relax-paragraph-name-uniqueness'
 ])
 
 AT_CLEANUP
